# bimp

./: .clang-format  CMakeLists.txt
cmake/: Qt6Config.cmake  Qt6Targets.cmake
src/: Logger.cpp  Logger.h  Utils.cpp  Utils.h  main.cpp  mainwindow.cpp  mainwindow.h
